[package]
name = "moka_rust"
version = "0.1.0"
authors = ["Louis Capitanchik <contact@louiscap.co>"]
build="src/build.rs"

[lib]
name="moka"

[[bin]]
name="moka"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
regex = "0.1"
toml = "0.1"
lazy_static = "0.1"

[build-dependencies]
walkdir = "0.1"
