[package]
name = "moka_rust"
version = "0.1.0"
authors = ["Louis Capitanchik <contact@louiscap.co>"]
build="src/build.rs"

[lib]
name="moka"

[[bin]]
name="moka"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
pcre = "0.2"
toml = "0.1"
lazy_static = "0.1"
semver = "0.2"
walkdir = "0.1"
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }

[build-dependencies]
walkdir = "0.1"
